fix progress overflow

--- a/src/components/UI/MultiChoiceMenu/MultiChoiceMenu.module.scss
+++ b/src/components/UI/MultiChoiceMenu/MultiChoiceMenu.module.scss
@@ -31,6 +31,7 @@
       border: 1px solid $--color-alpha-3;
       box-sizing: border-box;
       border-radius: 8px;
+      overflow-x: auto;
     }
   }
 }
